/cp 2018-10-08  Paolo Carlini  <paolo.carlini@oracle.com>

PR c++/71128
	* pt.c (do_decl_instantiation): Per 12.6.8/5, a concept cannot be
	explicitly instantiated.

/testsuite
2018-10-08  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/71128
	* g++.dg/concepts/pr71128.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@264914 138bc75d-0d04-0410-961f-82ee72b054a4